--- a/#sources/scss/header.scss
+++ b/#sources/scss/header.scss
@@ -1,5 +1,8 @@
 .header {
-  background: url("../img/bg_header.jpg") top no-repeat;
+  background: white url("../img/bg_header.jpg") top no-repeat;
+  position: fixed;
+  z-index: 50;
+  width: 100%;
   @media (max-width: $md3+px) {
     background-position: 0 -20px !important;
   }
@@ -209,7 +212,7 @@
     @media (max-width: 640px) {
       color: $bc;
       font-weight: 500;
-    font-size: 15px;
+      font-size: 15px;
     }
     span {
       border-bottom: 1px dotted;
@@ -358,10 +361,14 @@
       @include anim(0.4s, 0s);
       &:before {
         content: "";
-        position: fixed; left:0; top:0; width: 100%; height: 105px;
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 105px;
         background-color: #009db1;
         @media (max-width: $md3+px) {
-          height:70px;
+          height: 70px;
         }
       }
       @media (max-width: $md3+px) {
@@ -380,7 +387,7 @@
     @media (max-width: $md2+px) {
       display: block;
       li {
-      margin: 0px 0px 20px 0px;
+        margin: 0px 0px 20px 0px;
       }
     }
     li {
